# tapis

./: .gitignore  .ocamlformat  CHANGELOG.md  LICENSE  Makefile  dune-project  tapis.opam
example/: ack.pi  addsub.pi  addsub2.pi  fact.pi  fact2.pi  factz.pi  fib.pi  lift01.pi  lift02.pi  test02.pi  test03.pi  test04.pi  test05.pi  test06.pi  test07.pi
example/diverge/: loop.pi  mut_loop.pi
example/typical/: 2philosophers-deadlocked.pi  5philosophers-deadlocked.pi  README.md  account-unsafe.pi  account.pi  ackermann.pi  btree.pi  client-server-wrong.pi  client-server.pi  cobegin.pi  demo2.pi  ds-ex5-1.pi  ds-ex5-2.pi  factorial-rec.pi  factorial-rec2.pi  factorial.pi  lock-AB.pi  lock-AC.pi  lock-AD.pi  lock.pi  parallel-or.pi  simple1.pi  simple2.pi  simple3.pi  simple4.pi  simple5.pi  simple6.pi  simple7.pi  simple8.pi  stable.pi
example/typical/diverge/: 2n-philosophers.pi  2philosophers-lockfree.pi  5philosophers-lockfree.pi  account-unsafe.pi  account.pi  client-server-wrong2.pi  recursion.pi  simple9.pi  stateful-server-client.pi
src/: .ocamlinit  Makefile  constraints.ml  constraintsL.ml  constraintsR.ml  constraintsT.ml  debug.ml  dune  env.ml  error.ml  lexer.mll  location.ml  main.ml  parser.mly  piSyntax.ml  sbst.ml  seqSyntax.ml  stype.ml  syntax.ml  ttype.ml  type.ml
